<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         android:textSize="20dp"
        android:textColor="@color/black"
        android:text="@string/registration_form" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:textColor="@color/black"
        android:text="@string/enter_name" />

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:autofillHints="Enter name"
        android:inputType="text"
        android:minHeight="48dp"
        android:textSize="20dp"
        android:textColor="@color/black"
         />

    <TextView
        android:id="@+id/uidtext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_uid"
        android:textSize="20dp"
        android:textColor="@color/black"
        />

    <EditText
        android:id="@+id/uid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:autofillHints="Enter Uid"
        android:inputType="text"
        android:minHeight="48dp"
        android:textSize="20dp"
        android:textColor="@color/black"
         />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_course"
        android:textSize="20dp"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/course"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:autofillHints="Enter Course"
        android:inputType="text"
        android:minHeight="48dp"

        android:textSize="20dp"
        android:textColor="@color/black"/>

    <Button
        android:id="@+id/btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit" />
</LinearLayout>